Module_4/Module_3.2_saurabh/module_3_2_news/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> table
Rule 2     skiptag -> CONTENT skiptag
Rule 3     skiptag -> empty
Rule 4     table -> BEGIN skiptag data skiptag END
Rule 5     date -> OPEN_H4 CONTENT content CLOSE_H4
Rule 6     month -> OPEN_H3 CONTENT content CLOSE_H3
Rule 7     elements -> elements date content
Rule 8     elements -> date content
Rule 9     empty -> <empty>
Rule 10    data -> data month elements
Rule 11    data -> month elements
Rule 12    content -> CONTENT content
Rule 13    content -> empty

Terminals, with rules where they appear

BEGIN                : 4
CLOSE_H3             : 6
CLOSE_H4             : 5
CONTENT              : 2 5 6 12
END                  : 4
OPEN_H3              : 6
OPEN_H4              : 5
error                : 

Nonterminals, with rules where they appear

content              : 5 6 7 8 12
data                 : 4 10
date                 : 7 8
elements             : 7 10 11
empty                : 3 13
month                : 10 11
skiptag              : 2 4 4
start                : 0
table                : 1

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . table
    (4) table -> . BEGIN skiptag data skiptag END

    BEGIN           shift and go to state 3

    start                          shift and go to state 1
    table                          shift and go to state 2

state 1

    (0) S' -> start .



state 2

    (1) start -> table .

    $end            reduce using rule 1 (start -> table .)


state 3

    (4) table -> BEGIN . skiptag data skiptag END
    (2) skiptag -> . CONTENT skiptag
    (3) skiptag -> . empty
    (9) empty -> .

    CONTENT         shift and go to state 5
    OPEN_H3         reduce using rule 9 (empty -> .)

    skiptag                        shift and go to state 4
    empty                          shift and go to state 6

state 4

    (4) table -> BEGIN skiptag . data skiptag END
    (10) data -> . data month elements
    (11) data -> . month elements
    (6) month -> . OPEN_H3 CONTENT content CLOSE_H3

    OPEN_H3         shift and go to state 9

    data                           shift and go to state 7
    month                          shift and go to state 8

state 5

    (2) skiptag -> CONTENT . skiptag
    (2) skiptag -> . CONTENT skiptag
    (3) skiptag -> . empty
    (9) empty -> .

    CONTENT         shift and go to state 5
    OPEN_H3         reduce using rule 9 (empty -> .)
    END             reduce using rule 9 (empty -> .)

    skiptag                        shift and go to state 10
    empty                          shift and go to state 6

state 6

    (3) skiptag -> empty .

    OPEN_H3         reduce using rule 3 (skiptag -> empty .)
    END             reduce using rule 3 (skiptag -> empty .)


state 7

    (4) table -> BEGIN skiptag data . skiptag END
    (10) data -> data . month elements
    (2) skiptag -> . CONTENT skiptag
    (3) skiptag -> . empty
    (6) month -> . OPEN_H3 CONTENT content CLOSE_H3
    (9) empty -> .

    CONTENT         shift and go to state 5
    OPEN_H3         shift and go to state 9
    END             reduce using rule 9 (empty -> .)

    skiptag                        shift and go to state 11
    month                          shift and go to state 12
    empty                          shift and go to state 6

state 8

    (11) data -> month . elements
    (7) elements -> . elements date content
    (8) elements -> . date content
    (5) date -> . OPEN_H4 CONTENT content CLOSE_H4

    OPEN_H4         shift and go to state 15

    elements                       shift and go to state 13
    date                           shift and go to state 14

state 9

    (6) month -> OPEN_H3 . CONTENT content CLOSE_H3

    CONTENT         shift and go to state 16


state 10

    (2) skiptag -> CONTENT skiptag .

    OPEN_H3         reduce using rule 2 (skiptag -> CONTENT skiptag .)
    END             reduce using rule 2 (skiptag -> CONTENT skiptag .)


state 11

    (4) table -> BEGIN skiptag data skiptag . END

    END             shift and go to state 17


state 12

    (10) data -> data month . elements
    (7) elements -> . elements date content
    (8) elements -> . date content
    (5) date -> . OPEN_H4 CONTENT content CLOSE_H4

    OPEN_H4         shift and go to state 15

    elements                       shift and go to state 18
    date                           shift and go to state 14

state 13

    (11) data -> month elements .
    (7) elements -> elements . date content
    (5) date -> . OPEN_H4 CONTENT content CLOSE_H4

    CONTENT         reduce using rule 11 (data -> month elements .)
    OPEN_H3         reduce using rule 11 (data -> month elements .)
    END             reduce using rule 11 (data -> month elements .)
    OPEN_H4         shift and go to state 15

    date                           shift and go to state 19

state 14

    (8) elements -> date . content
    (12) content -> . CONTENT content
    (13) content -> . empty
    (9) empty -> .

  ! shift/reduce conflict for CONTENT resolved as shift
    CONTENT         shift and go to state 21
    OPEN_H4         reduce using rule 9 (empty -> .)
    OPEN_H3         reduce using rule 9 (empty -> .)
    END             reduce using rule 9 (empty -> .)

  ! CONTENT         [ reduce using rule 9 (empty -> .) ]

    content                        shift and go to state 20
    empty                          shift and go to state 22

state 15

    (5) date -> OPEN_H4 . CONTENT content CLOSE_H4

    CONTENT         shift and go to state 23


state 16

    (6) month -> OPEN_H3 CONTENT . content CLOSE_H3
    (12) content -> . CONTENT content
    (13) content -> . empty
    (9) empty -> .

    CONTENT         shift and go to state 21
    CLOSE_H3        reduce using rule 9 (empty -> .)

    content                        shift and go to state 24
    empty                          shift and go to state 22

state 17

    (4) table -> BEGIN skiptag data skiptag END .

    $end            reduce using rule 4 (table -> BEGIN skiptag data skiptag END .)


state 18

    (10) data -> data month elements .
    (7) elements -> elements . date content
    (5) date -> . OPEN_H4 CONTENT content CLOSE_H4

    CONTENT         reduce using rule 10 (data -> data month elements .)
    OPEN_H3         reduce using rule 10 (data -> data month elements .)
    END             reduce using rule 10 (data -> data month elements .)
    OPEN_H4         shift and go to state 15

    date                           shift and go to state 19

state 19

    (7) elements -> elements date . content
    (12) content -> . CONTENT content
    (13) content -> . empty
    (9) empty -> .

  ! shift/reduce conflict for CONTENT resolved as shift
    CONTENT         shift and go to state 21
    OPEN_H4         reduce using rule 9 (empty -> .)
    OPEN_H3         reduce using rule 9 (empty -> .)
    END             reduce using rule 9 (empty -> .)

  ! CONTENT         [ reduce using rule 9 (empty -> .) ]

    content                        shift and go to state 25
    empty                          shift and go to state 22

state 20

    (8) elements -> date content .

    OPEN_H4         reduce using rule 8 (elements -> date content .)
    CONTENT         reduce using rule 8 (elements -> date content .)
    OPEN_H3         reduce using rule 8 (elements -> date content .)
    END             reduce using rule 8 (elements -> date content .)


state 21

    (12) content -> CONTENT . content
    (12) content -> . CONTENT content
    (13) content -> . empty
    (9) empty -> .

  ! shift/reduce conflict for CONTENT resolved as shift
    CONTENT         shift and go to state 21
    OPEN_H4         reduce using rule 9 (empty -> .)
    OPEN_H3         reduce using rule 9 (empty -> .)
    END             reduce using rule 9 (empty -> .)
    CLOSE_H3        reduce using rule 9 (empty -> .)
    CLOSE_H4        reduce using rule 9 (empty -> .)

  ! CONTENT         [ reduce using rule 9 (empty -> .) ]

    content                        shift and go to state 26
    empty                          shift and go to state 22

state 22

    (13) content -> empty .

    OPEN_H4         reduce using rule 13 (content -> empty .)
    CONTENT         reduce using rule 13 (content -> empty .)
    OPEN_H3         reduce using rule 13 (content -> empty .)
    END             reduce using rule 13 (content -> empty .)
    CLOSE_H3        reduce using rule 13 (content -> empty .)
    CLOSE_H4        reduce using rule 13 (content -> empty .)


state 23

    (5) date -> OPEN_H4 CONTENT . content CLOSE_H4
    (12) content -> . CONTENT content
    (13) content -> . empty
    (9) empty -> .

    CONTENT         shift and go to state 21
    CLOSE_H4        reduce using rule 9 (empty -> .)

    content                        shift and go to state 27
    empty                          shift and go to state 22

state 24

    (6) month -> OPEN_H3 CONTENT content . CLOSE_H3

    CLOSE_H3        shift and go to state 28


state 25

    (7) elements -> elements date content .

    OPEN_H4         reduce using rule 7 (elements -> elements date content .)
    CONTENT         reduce using rule 7 (elements -> elements date content .)
    OPEN_H3         reduce using rule 7 (elements -> elements date content .)
    END             reduce using rule 7 (elements -> elements date content .)


state 26

    (12) content -> CONTENT content .

    OPEN_H4         reduce using rule 12 (content -> CONTENT content .)
    CONTENT         reduce using rule 12 (content -> CONTENT content .)
    OPEN_H3         reduce using rule 12 (content -> CONTENT content .)
    END             reduce using rule 12 (content -> CONTENT content .)
    CLOSE_H3        reduce using rule 12 (content -> CONTENT content .)
    CLOSE_H4        reduce using rule 12 (content -> CONTENT content .)


state 27

    (5) date -> OPEN_H4 CONTENT content . CLOSE_H4

    CLOSE_H4        shift and go to state 29


state 28

    (6) month -> OPEN_H3 CONTENT content CLOSE_H3 .

    OPEN_H4         reduce using rule 6 (month -> OPEN_H3 CONTENT content CLOSE_H3 .)


state 29

    (5) date -> OPEN_H4 CONTENT content CLOSE_H4 .

    CONTENT         reduce using rule 5 (date -> OPEN_H4 CONTENT content CLOSE_H4 .)
    OPEN_H4         reduce using rule 5 (date -> OPEN_H4 CONTENT content CLOSE_H4 .)
    OPEN_H3         reduce using rule 5 (date -> OPEN_H4 CONTENT content CLOSE_H4 .)
    END             reduce using rule 5 (date -> OPEN_H4 CONTENT content CLOSE_H4 .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for CONTENT in state 14 resolved as shift
WARNING: shift/reduce conflict for CONTENT in state 19 resolved as shift
WARNING: shift/reduce conflict for CONTENT in state 21 resolved as shift
